<resources>
    <string name="app_name">TodoApp</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="imag">imag</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
</resources>