<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="15dp"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/app_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/Create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:maxLines="1"
        android:text="Create your Account"
        android:textColor="#000000"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstname"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColorHint="#757575"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="16sp" />

    </LinearLayout>


    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#009688"
        android:clickable="false"
        android:fontFamily="cursive"
        android:text="@string/submit"
        android:textColor="#090707"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/pBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:visibility="invisible"/>

</LinearLayout>