<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!--                <ImageView-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:contentDescription="@string/imag"-->
<!--                    android:src="@drawable/app_logo" />-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="217dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="Login Your Account"
            android:textColor="#009688"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:gravity="center"
            android:background="@drawable/custom_input"
            android:hint="please enter your email address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />



        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="please enter your password"
            android:inputType="textPassword"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_lock"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#009688"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="right"
            android:text="@string/don_t_have_an_account"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />
        <TextView
            android:id="@+id/txtForegetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textStyle="bold|italic"
            tools:ignore="RtlHardcoded" />
        <ProgressBar
            android:id="@+id/pBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="50dp"
            android:minHeight="50dp"
            android:visibility="invisible"/>

    </LinearLayout>



</LinearLayout>